[package]
name = "spl-test-name-service"
description = "Solana Test Name Service"
version = "0.1.1"
authors = [
  "Noaki Murano <naokimurano1996@gmail.com>"
]
license = "Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
solana-program = "1.7.11"
num-traits = "0.2"
borsh = "0.9.1"
num-derive = "0.3.3"
thiserror = "1.0.29"

[dev-dependencies]
solana-program-test = "1.7.11"
solana-sdk = "1.7.11"

[lib]
crate-type = ["cdylib", "lib"]
